EDU-657 Extract and unify action buttons

--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -7,35 +7,7 @@
 }
 
 .FavoritesTab-actions {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-}
-
-.FavoritesTab-action {
-  text-decoration: none;
-  display: flex;
-  width: 22px;
-  height: 22px;
-  align-items: center;
-  justify-content: center;
-
-  &:hover,
-  &:active {
-    .m-box-shadow-dark;
-    text-decoration: none;
-    background-color: @edu-white;
-  }
-
-  &.FavoritesTab-action--delete {
-    color: @edu-error-color;
-
-    &:hover,
-    &:active {
-      color: @edu-error-color;
-    }
-  }
+  text-align: center;
 }
 
 .FavoritesTab-info {
