--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -101,6 +101,7 @@
 @import '../components/card-selector.less';
 @import '../components/iteration-panel.less';
 @import '../components/copyright-notice.less';
+@import '../components/action-button.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
