--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -1,5 +1,3 @@
-@files-grid-viewer-action-size: 22px;
-
 .FilesGridViewer {
   display: flex;
   gap: 20px;
@@ -66,52 +64,12 @@
 }
 
 .FilesGridViewer-actions {
-  cursor: pointer;
   display: none;
   position: absolute;
-  top: -(@files-grid-viewer-action-size / 2);
-  right: -(@files-grid-viewer-action-size / 2);
+  top: -(@edu-control-height-sm / 2);
+  right: -(@edu-control-height-sm / 2);
 
   &.are-visible {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-  }
-}
-
-.FilesGridViewer-action {
-  .m-box-shadow;
-  background-color: @edu-white;
-  width: @files-grid-viewer-action-size;
-  height: @files-grid-viewer-action-size;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  opacity: 90%;
-
-  &:hover,
-  &:active {
-    .m-box-shadow-dark;
-    text-decoration: none;
-  }
-
-  &.FilesGridViewer-action--preview {
-    color: @edu-success-color;
-
-    &:hover,
-    &:active {
-      color: @edu-success-color;
-    }
-  }
-
-  &.FilesGridViewer-action--delete {
-    color: @edu-error-color;
-
-    &:hover,
-    &:active {
-      color: @edu-error-color;
-    }
+    display: block;
   }
 }
