EDU-662 Improve markdown preview styling

--- a/src/components/input-and-preview.less
+++ b/src/components/input-and-preview.less
@@ -17,4 +17,6 @@
   background-color: @edu-background-color-light;
   padding: 4px 11px;
   display: grid;
+  min-height: @edu-control-height-base;
+  border-color: @edu-border-color-light;
 }
