--- a/src/components/media-player-track.less
+++ b/src/components/media-player-track.less
@@ -30,13 +30,24 @@
 .MediaPlayerTrack--audioModeOverlay {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   display: flex;
-  width: 100%;
-  height: 100%;
   align-items: center;
   justify-content: center;
   font-size: 100px;
   background-color: @edu-white;
   color: @edu-text-color-secondary;
+}
+
+.MediaPlayerTrack--screenOverlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: grid;
+  align-items: stretch;
+  justify-items: stretch;
 }
