EDU-682 Create and delete document from room

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -94,6 +94,7 @@
 @import '../components/media-player-controls.less';
 @import '../components/not-supported-section.less';
 @import '../components/plugin-selector-dialog.less';
+@import '../components/document-metadata-modal.less';
 @import '../components/admin/storage-plans-tab.less';
 @import '../components/media-player-progress-bar.less';
 @import '../components/never-scrolling-text-area.less';
