EDU-682 Fix styling on document modal

--- a/src/components/document-metadata-modal.less
+++ b/src/components/document-metadata-modal.less
@@ -2,6 +2,7 @@
 
 .DocumentMetadataModal-sequenceCollapse {
   .m-antd-collapse-without-padding();
+  padding-bottom: @edu-content-padding;
 }
 
 .DocumentMetadataModal-sequenceInfo {
