EDU-651 Adjust answer styling in editor view

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -96,8 +96,9 @@
 }
 
 .InteractiveMediaEditor-answer {
-  display: flex;
+  display: grid;
   align-items: center;
+  grid-template-columns: 1fr auto auto;
   margin-bottom: @edu-content-padding;
 }
 
