EDU-678 Restyle back link from search

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -38,7 +38,7 @@
   width: 100%;
 }
 
-.StorageLocation-storageInfo {
+.StorageLocation-locationInfo {
   min-height: 40px;
   margin-bottom: 20px;
 }
@@ -60,6 +60,10 @@
   gap: 5px;
   align-items: center;
   margin-bottom: 40px;
+
+  &.StorageLocation-screenBack--noMargin {
+    margin: 0;
+  }
 
   &.is-disabled {
     color: @edu-text-color-secondary;
