EDU-684 Restyle document info cell to fit room info

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -80,6 +80,7 @@
 @import '../components/media-player-track.less';
 @import '../components/ui-language-dialog.less';
 @import '../components/admin/settings-tab.less';
+@import '../components/document-info-cell.less';
 @import '../components/default-page-footer.less';
 @import '../components/pages/create-import.less';
 @import '../components/default-page-header.less';
