--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -27,6 +27,10 @@
   color: @edu-error-color;
 }
 
+.FilesUploadOverview-fileStatusPreview {
+  margin-top: 25px;
+}
+
 .FilesUploadOverview-fileStatusContainer {
   max-height: 70%;
   overflow: auto;
