--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -93,6 +93,7 @@
 @import '../components/files-upload-overview.less';
 @import '../components/media-player-controls.less';
 @import '../components/not-supported-section.less';
+@import '../components/dialog-footer-buttons.less';
 @import '../components/plugin-selector-dialog.less';
 @import '../components/admin/storage-plans-tab.less';
 @import '../components/media-player-progress-bar.less';
