--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -16,5 +16,23 @@
 }
 
 .LoginPage-loginButton {
-  margin-top: 48px;
+  margin-top: 38px;
+}
+
+.LoginPage-hint {
+  display: flex;
+  gap: 10px;
+  font-size: 12px;
+  cursor: pointer;
+  margin-top: 10px;
+  align-items: center;
+  padding: @edu-content-padding;
+  border: 1px solid lighten(@edu-warning-color, 20%);
+  background-color: lighten(@edu-warning-color, 40%);
+  border-radius: @edu-border-radius-base;
+}
+
+.LoginPage-hintIcon {
+  font-size: 16px;
+  color: @edu-warning-color;
 }
