--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -64,6 +64,7 @@
 @import '../components/pages/register.less';
 @import '../components/metadata-title.less';
 @import '../components/markdown-input.less';
+@import '../components/profile-header.less';
 @import '../components/deleted-section.less';
 @import '../components/pages/dashboard.less';
 @import '../components/section-display.less';
