EDU-696 Render introduction on user page

--- a/src/components/pages/user.less
+++ b/src/components/pages/user.less
@@ -1,1 +1,10 @@
 .UserPage {}
+
+.UserPage-introduction {
+  margin: 50px auto;
+  max-width: 600px;
+
+  @media @edu-media-phone {
+    max-width: none;
+  }
+}
