--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -22,9 +22,17 @@
   font-size: @edu-heading-1-size;
 }
 
-.ProfileHeader-email,
 .ProfileHeader-organization {
   display: block;
   font-size: 12px;
+  color: @edu-text-color-secondary;
+}
+
+.ProfileHeader-email {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  font-size: 12px;
+  margin-top: 5px;
   color: @edu-text-color-secondary;
 }
