EDU-696 Show closed account message

--- a/src/components/pages/user.less
+++ b/src/components/pages/user.less
@@ -1,10 +1,21 @@
 .UserPage {}
 
+.UserPage-header {
+  margin-bottom: 50px;
+}
+
 .UserPage-introduction {
-  margin: 50px auto;
+  margin: 0 auto;
   max-width: 600px;
 
   @media @edu-media-phone {
     max-width: none;
   }
+}
+
+.UserPage-accountClosed {
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
