EDU-697 Add favorites star to user page

--- a/src/components/pages/user.less
+++ b/src/components/pages/user.less
@@ -2,6 +2,17 @@
 
 .UserPage-header {
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.UserPage-headerProfile {
+  flex: 1 1 auto;
+}
+
+.UserPage-headerStart {
+  flex: 0 0 0%;
 }
 
 .UserPage-introduction {
