--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -73,6 +73,7 @@
 @import '../components/storage-location.less';
 @import '../components/import-type-icon.less';
 @import '../components/copyright-notice.less';
+@import '../components/room-public-card.less';
 @import '../components/default-site-logo.less';
 @import '../components/input-and-preview.less';
 @import '../components/resource-selector.less';
@@ -86,6 +87,7 @@
 @import '../components/default-page-footer.less';
 @import '../components/pages/create-import.less';
 @import '../components/default-page-header.less';
+@import '../components/document-public-card.less';
 @import '../components/pages/reset-password.less';
 @import '../components/media-range-selector.less';
 @import '../components/default-page-template.less';
