EDU-698 Improve user page cards look

--- a/src/components/room-public-card.less
+++ b/src/components/room-public-card.less
@@ -1,6 +1,6 @@
 .RoomPublicCard {
   width: 250px;
-  height: 170px;
+  height: 180px;
   display: flex;
   flex-direction: column;
   border-radius: @edu-border-radius-base;
@@ -26,8 +26,8 @@
 .RoomPublicCard-infoRow {
   display: flex;
   gap: 10px;
-  font-size: 13px;
-  padding: 0 10px;
+  font-size: 12px;
+  padding: 2px 10px 0 10px;
   color: lighten(@edu-text-color, 10%);
 }
 
