--- a/src/components/document-public-card.less
+++ b/src/components/document-public-card.less
@@ -1,5 +1,5 @@
-@document-public-card-vertical-line-left-padding: 40px;
-@document-public-card-notebook-line-height: 30px;
+@document-public-card-notebook-line-height: 25px;
+@document-public-card-vertical-line-left-padding: 35px;
 @document-public-card-horizontal-padding: @edu-content-padding;
 @document-public-card-backround: lighten(@edu-background-color-light, 0%);
 @document-public-card-notebook-left-padding: @document-public-card-vertical-line-left-padding - @document-public-card-horizontal-padding + 15px;
@@ -14,7 +14,7 @@
   border-radius: @edu-border-radius-base;
   border: 1px solid @edu-border-color-base;
   background-color: @document-public-card-backround;
-  padding: 20px @document-public-card-horizontal-padding 20px @document-public-card-horizontal-padding;
+  padding: 15px @document-public-card-horizontal-padding 4px @document-public-card-horizontal-padding;
 
   &::before {
     position: absolute;
@@ -48,12 +48,19 @@
   overflow: hidden;
 }
 
+.DocumentPublicCard-notebookDate {
+  font-size: 12px;
+  font-style: italic;
+  margin: auto auto 24px 50px;
+  color: lighten(@edu-text-color, 10%);
+}
+
 .DocumentPublicCard-notebookLink {
   display: flex;
   gap: 5px;
   font-size: 13px;
   align-items: center;
-  margin: auto 0 5px auto;
+  margin: 0 0 0 auto;
   color: lighten(@edu-text-color, 10%);
 }
 
