--- a/src/components/minimal-room-card.less
+++ b/src/components/minimal-room-card.less
@@ -1,4 +1,4 @@
-.RoomPublicCard {
+.MinimalRoomCard {
   width: 250px;
   height: 180px;
   display: flex;
@@ -8,7 +8,7 @@
   padding: @edu-content-padding;
 }
 
-.RoomPublicCard-title {
+.MinimalRoomCard-title {
   height: 50px;
   font-size: 14px;
   display: -webkit-box;
@@ -19,11 +19,11 @@
   padding: 0 10px;
 }
 
-.RoomPublicCard-divider {
+.MinimalRoomCard-divider {
   margin: 0 0 15px 0;
 }
 
-.RoomPublicCard-infoRow {
+.MinimalRoomCard-infoRow {
   display: flex;
   gap: 10px;
   font-size: 12px;
@@ -31,6 +31,6 @@
   color: lighten(@edu-text-color, 10%);
 }
 
-.RoomPublicCard-button {
+.MinimalRoomCard-button {
   margin-top: auto;
 }
