--- a/src/components/pages/user.less
+++ b/src/components/pages/user.less
@@ -38,15 +38,7 @@
 }
 
 .UserPage-sectionCards {
-  .m-section-content;
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-
-  @media @edu-media-phone {
-    flex-direction: column;
-    align-items: center;
-  }
+  .m-cards-section-content;
 }
 
 .UserPage-sectionLink {
