--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -14,15 +14,7 @@
 }
 
 .RoomsTab-roomsGroup {
-  .m-section-content;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-
-  @media @edu-media-phone {
-    flex-direction: column;
-    align-items: center;
-  }
+  .m-cards-section-content;
 }
 
 .RoomsTab-noRoomsInGroup {
