EDU-704 Cover cases of favorite room and document having been deleted

--- a/src/components/document-card.less
+++ b/src/components/document-card.less
@@ -58,7 +58,7 @@
   gap: 5px;
   font-size: 13px;
   align-items: center;
-  margin: 0 0 10px auto;
+  margin: auto 0 10px auto;
   color: lighten(@edu-text-color, 10%);
 }
 
