--- a/src/components/document-card.less
+++ b/src/components/document-card.less
@@ -58,8 +58,12 @@
   gap: 5px;
   font-size: 13px;
   align-items: center;
-  margin: auto 0 10px auto;
+  margin: 0 0 10px auto;
   color: lighten(@edu-text-color, 10%);
+
+  &.DocumentCard-notebookLink--deletedDocument {
+    margin: auto 0 10px auto;
+  }
 }
 
 .DocumentCard-notebookLinkArrow {
