--- a/src/components/input-and-preview.less
+++ b/src/components/input-and-preview.less
@@ -8,15 +8,19 @@
   }
 }
 
-.InputAndPreview--input {
+.InputAndPreview-input {
   display: grid;
 }
 
-.InputAndPreview--preview {
+.InputAndPreview-preview {
   .m-control-border-base;
   background-color: @edu-background-color-light;
   padding: 4px 11px;
   display: grid;
   min-height: 2 * @edu-control-height-base;
   border-color: @edu-border-color-light;
+
+  .InputAndPreview-preview--inline {
+    min-height: @edu-control-height-base;
+  }
 }
