EDU-712 Change fix for preview content breaking bounds

--- a/src/components/markdown-input.less
+++ b/src/components/markdown-input.less
@@ -39,7 +39,8 @@
 }
 
 .MarkdownInput-preview {
-  overflow-x: scroll;
+  word-break: normal;
+  overflow-wrap: anywhere;
 
   &.MarkdownInput-preview--inline {
     overflow-x: hidden;
