EDU-719 Add barebone multitrack-media-plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -132,4 +132,5 @@
 @import '../plugins/ear-training/ear-training.less';
 @import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
+@import '../plugins/multitrack-media/multitrack-media.less';
 @import '../plugins/interactive-media/interactive-media.less';
