EDU-723 Extract volume-slider component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -40,6 +40,7 @@
 @import '../components/pages/index.less';
 @import '../components/pages/login.less';
 @import '../components/pages/users.less';
+@import '../components/track-mixer.less';
 @import '../components/color-picker.less';
 @import '../components/pdf-document.less';
 @import '../components/file-preview.less';
@@ -50,6 +51,7 @@
 @import '../components/abc-notation.less';
 @import '../components/pages/search.less';
 @import '../components/image-editor.less';
+@import '../components/volume-slider.less';
 @import '../components/document-card.less';
 @import '../components/grid-selector.less';
 @import '../components/control-panel.less';
