EDU-680 Implement ImageEditor component

--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -49,3 +49,8 @@
     color: @edu-error-color;
   }
 }
+
+.FilesUploadOverview-fileStatusMessage {
+  font-style: italic;
+  color: @edu-secondary-color-dark;
+}
