EDU-680 Adjust styling and add some info for the user

--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -31,9 +31,14 @@
   margin-top: 25px;
 }
 
+.FilesUploadOverview-message {
+  margin-bottom: 25px;
+}
+
 .FilesUploadOverview-fileStatusContainer {
-  max-height: 70%;
+  max-height: 50vh;
   overflow: auto;
+  margin-bottom: 25px;
 }
 
 .FilesUploadOverview-fileStatusIcon {
