--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -68,7 +68,17 @@
   margin-top: 30px;
 }
 
-.StorageLocation-imageEditor {
+.StorageLocation-imageEditorContainer {
   height: 60vh;
   display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 1fr auto;
+  gap: 20px;
+  overflow: hidden;
+}
+
+.StorageLocation-imageEditorButtons {
+  margin: 0 auto;
+  display: flex;
+  gap: @edu-button-spacing;
 }
