EDU-723 Show placeholder for not loaded track

--- a/src/components/track-mixer.less
+++ b/src/components/track-mixer.less
@@ -66,6 +66,12 @@
   }
 }
 
+.TrackMixer-barPlaceholderText {
+  font-size: 10px;
+  padding-left: 5px;
+  color: @edu-text-color-secondary;
+}
+
 .TrackMixer-barRowOffset {
   position: absolute;
   top: @tracx-mixer-bar-duration-top;
