EDU-723 Change main track color

--- a/src/components/track-mixer.less
+++ b/src/components/track-mixer.less
@@ -57,7 +57,7 @@
   position: relative;
   min-width: 80px;
   height: @track-mixer-bar-height;
-  background-color: @edu-primary-color-light;
+  background-color: @edu-secondary-color-dark;
 
   &.TrackMixer-bar--secondaryTrack {
     position: absolute;
