EDU-723 Add second pre-set multitrack-media configuration

--- a/src/components/track-mixer.less
+++ b/src/components/track-mixer.less
@@ -75,6 +75,7 @@
 
 .TrackMixer-barRowOffset {
   position: absolute;
+  user-select: none;
   top: @tracx-mixer-bar-duration-top;
   left: @tracx-mixer-bar-duration-left-right;
   width: 100%;
