--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -42,6 +42,14 @@
       display: grid;
     }
   }
+
+  &.is-invalid {
+    border: 1px solid @edu-error-color;
+
+    &:hover {
+      border: 1px solid @edu-error-color;
+    }
+  }
 }
 
 .SectionDisplay-actions {
