EDU-746 Remove public rooms

--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -1,13 +1,10 @@
-@room-card-width: 250px;
-@room-card-padding: @edu-content-padding;
-
 .RoomCard {
   position: relative;
   width: 250px;
-  height: 270px;
+  height: 250px;
   display: flex;
   flex-direction: column;
-  padding: @room-card-padding;
+  padding: @edu-content-padding;
   border-radius: @edu-border-radius-base;
   background-color: @edu-background-color-base;
 }
@@ -77,12 +74,6 @@
 
 .RoomCard-infoLabel {
   flex: 0 0 70px;
-}
-
-.RoomCard-accessCell {
-  display: flex;
-  gap: 7px;
-  align-items: center;
 }
 
 .RoomCard-button {
