EDU-753 Delete dueOn from documents

--- a/src/components/document-metadata-modal.less
+++ b/src/components/document-metadata-modal.less
@@ -1,10 +1,10 @@
 .DocumentMetadataModal {}
 
-.DocumentMetadataModal-sequenceCollapse {
-  .m-antd-collapse-without-padding();
-  padding-bottom: @edu-content-padding;
+.DocumentMetadataModal-sequenceInput {
+  width: 100%;
 }
 
-.DocumentMetadataModal-sequenceInfo {
-  margin-bottom: @edu-content-padding;
+.DocumentMetadataModal-infoIcon {
+  color: @edu-secondary-color-dark;
+  margin-left: @edu-button-spacing;
 }
