EDU-749 Add verified flag to documents

--- a/src/components/document-metadata-modal.less
+++ b/src/components/document-metadata-modal.less
@@ -8,3 +8,7 @@
   color: @edu-secondary-color-dark;
   margin-left: @edu-button-spacing;
 }
+
+.DocumentMetadataModal-divider {
+  margin-top: 35px;
+}
