--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -59,3 +59,8 @@
   font-style: italic;
   color: @edu-secondary-color-dark;
 }
+
+.FilesUploadOverview-imageOptimizationCheckbox {
+  font-size: 13px;
+  margin-left: 10px;
+}
