EDU-724 - Create basic multitrack player

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -100,6 +100,7 @@
 @import '../components/not-supported-section.less';
 @import '../components/dialog-footer-buttons.less';
 @import '../components/plugin-selector-dialog.less';
+@import '../components/multitrack-media-player.less';
 @import '../components/document-metadata-modal.less';
 @import '../components/admin/storage-plans-tab.less';
 @import '../components/media-player-progress-bar.less';
