EDU-736 Extract file-preview-screen

--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -82,3 +82,30 @@
   display: flex;
   gap: @edu-button-spacing;
 }
+
+.StorageLocation-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: @edu-white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.StorageLocation-screenContent {}
+
+.StorageLocation-screenFooter {
+  display: flex;
+  align-items: center;
+  gap: @edu-controls-group-gap;
+  justify-content: space-between;
+}
+
+.StorageLocation-screenFooterButtons {
+  display: flex;
+  align-items: center;
+  gap: @edu-controls-group-gap;
+}
