EDU-736 Sort out CSS and translations

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -106,6 +106,7 @@
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/browser-not-supported.less';
 @import '../components/pages/complete-password-reset.less';
+@import '../components/resource-picker/resource-picker.less';
 @import '../components/resource-picker/storage-location.less';
 @import '../components/resource-picker/resource-selector.less';
 @import '../components/localization/country-flag-and-name.less';
