EDU-736 Reorganize CSS again

--- a/src/components/resource-picker/resource-picker-screen.less
+++ b/src/components/resource-picker/resource-picker-screen.less
@@ -1,6 +1,4 @@
-.ResourcePicker {}
-
-.ResourcePicker-screen {
+.ResourcePickerScreen {
   position: absolute;
   top: 0;
   left: 0;
@@ -12,26 +10,17 @@
   justify-content: space-between;
 }
 
-.ResourcePicker-screenContent {}
+.ResourcePickerScreen-content {}
 
-.ResourcePicker-screenFooter {
+.ResourcePickerScreen-footer {
   display: flex;
   align-items: center;
   gap: @edu-controls-group-gap;
   justify-content: space-between;
 }
 
-.ResourcePicker-screenFooterButtons {
+.ResourcePickerScreen-footerButtons {
   display: flex;
   align-items: center;
   gap: @edu-controls-group-gap;
-}
-
-.ResourcePicker-fileEditorImageContainer {
-  height: 60vh;
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-rows: 1fr auto;
-  gap: 20px;
-  overflow: hidden;
 }
