--- a/src/components/media-player/multitrack-media-player.less
+++ b/src/components/media-player/multitrack-media-player.less
@@ -6,3 +6,9 @@
     background-color: @edu-background-color-light;
   }
 }
+
+.MultitrackMediaPlayer-trackMixer {
+  margin-top: 15px;
+  padding-top: 15px;
+  border-top: 1px solid darken(@edu-background-color-base, 10%);
+}
