EDU-736 Extract component for file upload screen

--- a/src/components/image-editor.less
+++ b/src/components/image-editor.less
@@ -6,6 +6,10 @@
   display: grid;
   grid-template-rows: 1fr auto;
   grid-template-columns: 100%;
+}
+
+.ImageEditor-imageWrapper {
+  height: 100%;
   overflow: hidden;
 }
 
