--- a/src/components/resource-picker/file-editor-screen.less
+++ b/src/components/resource-picker/file-editor-screen.less
@@ -1,8 +1,4 @@
 .FileEditorScreen {
-  height: 60vh;
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-rows: 1fr auto;
-  gap: 20px;
+  height: 100%;
   overflow: hidden;
 }
