--- a/src/components/resource-picker/resource-picker-screen.less
+++ b/src/components/resource-picker/resource-picker-screen.less
@@ -2,6 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  gap: 20px;
   width: 100%;
   height: 100%;
   background-color: @edu-white;
@@ -10,10 +11,15 @@
   justify-content: space-between;
 }
 
-.ResourcePickerScreen-content {}
+.ResourcePickerScreen-content {
+  height: 100%;
+  max-height: 100%;
+  overflow: auto;
+}
 
 .ResourcePickerScreen-footer {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: @edu-controls-group-gap;
   justify-content: space-between;
@@ -21,6 +27,7 @@
 
 .ResourcePickerScreen-footerButtons {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: @edu-controls-group-gap;
 }
