EDU-724 Create initial multitrack media plugin display

--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -1,3 +1,13 @@
 .MultitrackMediaDisplay {}
 
+.MultitrackMediaDisplay-content {
+  margin: 0 auto;
+}
+
+.MultitrackMediaDisplay-errorMessage {
+  font-weight: bold;
+  text-align: center;
+  color: @edu-error-color;
+}
+
 .MultitrackMediaEditor {}
