EDU-736 Streamline, simplifcations and cleanup

--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -23,8 +23,8 @@
   justify-content: space-between;
 }
 
-.StorageLocation-filesViewerSelectCotainer {
-  width: 100px;
+.StorageLocation-filesViewerSelectContainer {
+  min-width: 100px;
 }
 
 .StorageLocation-filesViewerSelect {
@@ -50,8 +50,4 @@
     color: @edu-text-color-secondary;
     cursor: not-allowed;
   }
-}
-
-.StorageLocation-screenSelect {
-  margin-top: 30px;
 }
