--- a/src/components/resource-picker/resource-picker-screen.less
+++ b/src/components/resource-picker/resource-picker-screen.less
@@ -15,6 +15,11 @@
   height: 100%;
   max-height: 100%;
   overflow: auto;
+
+  &.ResourcePickerScreen-content--centered {
+    height: fit-content;
+    margin: auto 0;
+  }
 }
 
 .ResourcePickerScreen-footer {
