--- a/src/components/resource-picker/resource-picker-screen.less
+++ b/src/components/resource-picker/resource-picker-screen.less
@@ -14,11 +14,15 @@
 .ResourcePickerScreen-content {
   height: 100%;
   max-height: 100%;
-  overflow: auto;
+  overflow: hidden;
 
   &.ResourcePickerScreen-content--centered {
     height: fit-content;
     margin: auto 0;
+  }
+
+  &.ResourcePickerScreen-content--scrollable {
+    overflow: auto;
   }
 }
 
