EDU-736 Disable user select for parent navigation cell

--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -23,8 +23,9 @@
   display: flex;
   align-items: center;
 
-  &.FilesListViewer-fileName--parentLink {
+  &.FilesListViewer-fileNameCell--parentLink {
     color: lighten(@edu-text-color, 25%);
+    user-select: none;
   }
 }
 
